kustomize/base/services/hornex-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hornex-api
  name: hornex-api
spec:
  ports:
  - name: tcp
    port: 80
    targetPort: 8000
  selector:
    app: hornex-api
