kustomize/base/services/hornex-api/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: hornex-api
  name: hornex-api
spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: hornex-api
          port: 80
